complete rewrite, much cleaner, much easier to parse, and pretty clean design as well

--- a/index.html
+++ b/index.html
@@ -2,10 +2,29 @@
 <html>
     <head>
         <title>Crypto Magic</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/kube/6.5.2/css/kube.min.css" />
     </head>
     <body>
+        <div class="row align-center" style="margin: 25px 0px 15px 0px;">
+            <div class="col col-6">
+                <h2>Crypto Magic</h2>
+            </div>
+        </div>
+        
         <div id="crypto-magic">
         </div>
-        <script src="/dist/bundle.js"></script> 
+
+        <div class="row align-center" style="border-top: 1px solid;">
+            <div class="col col-6" style="padding-top: 15px;">
+                <p>Anthony Scinocco | Lyka Sunseara | Alex Friesen</p>
+            </div>
+        </div>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/kube/6.5.2/js/kube.min.js"></script>
+        <script src="dist/bundle.js"></script> 
     </body>
 </html>
